	Broken at SI:BYTECODES.Available restarts:
	1. (USE-VALUE) Supply a new value of type NUMBER.
	Broken at SI:BYTECODES.
	>> :b
	Backtrace: SI:BYTECODES > si:bytecodes
	>> :disassemble
	Evaluated form:
	   0	PUSH	'A
	   2	CALLG	1,COS
	   5	EXIT
	>> :lambda-expression
	(COS 'A)
   Similarly, :lambda-expression also works for other functions that keep
   this information.


* CLOS:

 - When caching generic function calls, ECL now uses a thread-local hash table
   instead of one hash table per generic function.

 - The classes STANDARD-ACCESSOR-METHOD, STANDARD-READER-METHOD and
   STANDARD-WRITER-METHOD have been implemented. These methods are created
   to access the slots of a standard class.

 - ECL now permits direct slots with an allocation of type :INSTANCE to have an
   explicit location index. These are called SEALED SLOTS. This location is
   enforced by COMPUTE-SLOTS and it is inherited by other subclasses. Conflicts
   are detected and the slot index is used to optimize the slot accessor
   methods.

 - ECL now adds another MOP extension, which is an option :SEALEDP that applies
   to classes and which seals all its slots, creating additional direct slot
   definitions for slots that were not sealed in parent classes.

 - The compiler now recognizes access to sealed slots when the associated classes
   have already been defined and the type of arguments to the accessors is known
   (either by some explicit declaration or by induction). For low safety or large
   speed settings, this leads to inline access to such slots using the precomputed
   location.

* Bugs fixed:

 - Intel/64bits running a 32 bits operating system caused a wrong choice of
   assembler code.

 - ASDF:MAKE-BUILD now handles better the case of a monolithic FASL that
   has to include a number of other subsystems.

 - We introduce a new operation, ASDF:LOAD-FASL-OP, which does the job of
   ASDF:LOAD-OP but using a single FASL file per system, thus saving